<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2011-2026 Ricardo do Canto
  ~
  ~ This file is part of the EnduranceTrio project.
  ~
  ~ Licensed under the Functional Software License (FSL), Version 1.1, ALv2 Future License
  ~ (the "License");
  ~
  ~ You may not use this file except in compliance with the License. You may obtain a copy
  ~ of the License at https://fsl.software/
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS" AND WITHOUT WARRANTIES OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING WITHOUT LIMITATION WARRANTIES OF FITNESS FOR A PARTICULAR
  ~ PURPOSE, MERCHANTABILITY, TITLE OR NON-INFRINGEMENT.
  ~
  ~ IN NO EVENT WILL WE HAVE ANY LIABILITY TO YOU ARISING OUT OF OR RELATED TO THE
  ~ SOFTWARE, INCLUDING INDIRECT, SPECIAL, INCIDENTAL OR CONSEQUENTIAL DAMAGES,
  ~ EVEN IF WE HAVE BEEN INFORMED OF THEIR POSSIBILITY IN ADVANCE.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.endurancetrio</groupId>
  <artifactId>endurancetrio-community</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <name>EnduranceTrio Community</name>
  <description>A central hub for endurance sports data and resources</description>

  <url>https://github.com/EnduranceCode/endurancetrio-community</url>

  <licenses>
    <license>
      <name>Functional Source License, Version 1.1, ALv2 Future License</name>
      <url>https://github.com/getsentry/fsl.software/blob/main/FSL-1.1-ALv2.template.md</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>EnduranceCode</id>
      <name>Ricardo do Canto</name>
      <email>endurancecode@gmail.com</email>
      <roles>
        <role>Lead Developer</role>
      </roles>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/EnduranceCode/endurancetrio-community.git</connection>
    <developerConnection>scm:git:ssh://git@github.com:EnduranceCode/endurancetrio-community.git</developerConnection>
    <url>https://github.com/EnduranceCode/endurancetrio-community</url>
    <tag>HEAD</tag>
  </scm>

  <packaging>pom</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.3</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <modules>
    <module>endurancetrio-app</module>
    <module>endurancetrio-data</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.2</version>

        <executions>
          <execution>
            <id>aggregate</id>
            <goals>
              <goal>aggregate-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
